--- a/pages/client-page.html
+++ b/pages/client-page.html
@@ -146,7 +146,7 @@
 					aria-expanded="false">Создать
 				</a>
 				<div class="dropdown-menu">
-					<button type="button" class="dropdown-item _icon-file">Смету</button>
+					<button type="button" class="dropdown-item _icon-smeta">Смету</button>
 					<button type="button" class="dropdown-item _icon-folder">Папку</button>
 					<button type="button" class="dropdown-item _icon-upload-file">Загрузить файл</button>
 				</div>
@@ -154,7 +154,7 @@
 			<div class="d-flex" style="column-gap: 24px;">
 				<div class="container-content" style='flex:0 1 66.337%'>
 					<div class="search-items" data-search-items>
-						<div class="search-items__input _icon-search mb-3">
+						<div class="search-items__input search-block _icon-search mb-3">
 							<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
 						</div>
 
@@ -195,7 +195,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-file ">
+							<li class="search-items__item  _icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -208,7 +208,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-file ">
+							<li class="search-items__item  _icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -221,7 +221,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-file ">
+							<li class="search-items__item  _icon-smeta ">
 								<span class="flex-fill ">Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -234,7 +234,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-file ">
+							<li class="search-items__item  _icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -247,7 +247,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item _icon-file ">
+							<li class="search-items__item _icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
@@ -260,7 +260,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="search-items__item  _icon-file ">
+							<li class="search-items__item  _icon-smeta ">
 								<span class="flex-fill "> Предварительная смета на монтаж инженерных коммуникаций №
 									15/11/2024—1</span> <span>12.12.2024</span>
 								<div class="search-items__btn-dropdown dropdown-search">
