--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -141,7 +141,7 @@
 							data-controlsidebar-slide="true"></button>
 					</div>
 					<div class="search-items" data-search-items>
-						<div class="search-items__input _icon-search mb-3">
+						<div class="search-items__input search-block _icon-search mb-3">
 							<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
 						</div>
 						<button type="button" data-widget="control-sidebar" data-controlsidebar-slide="true"
