--- a/pages/templates.html
+++ b/pages/templates.html
@@ -143,7 +143,7 @@
 
 			<div class="container-content">
 				<div class="search-items" data-search-items>
-					<div class="search-items__input _icon-search mb-3">
+					<div class="search-items__input search-block _icon-search mb-3">
 						<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
 					</div>
 
