--- a/pages/template-category.html
+++ b/pages/template-category.html
@@ -154,7 +154,7 @@
 			</div>
 			<div class="container-content">
 				<div class="search-items" data-search-items>
-					<div class="search-items__input _icon-search mb-3">
+					<div class="search-items__input search-block _icon-search mb-3">
 						<input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
 					</div>
 
